DESetup/metadata/objects/Opinion_Question__c.object
<CustomObject>
    <fields>
        <fullName>Deactivation_Reason__c</fullName>
        <label>Deactivation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Question Unclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Relevant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was Stupid to Begin With</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boss Told Me To</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opinion_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opinion</label>
        <referenceTo>Opinion__c</referenceTo>
        <relationshipLabel>Opinion Questions</relationshipLabel>
        <relationshipName>Opinion_Questions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <description>response type of question.  If text, there will be no opinion_responses. for boolean, there will be 2, for radio, there will be many</description>
        <inlineHelpText>text = open text response
boolean = True/False
Radio = multiple response, with only one selection allowed.
Picklist = multiple response, with only one selection shown at a time</inlineHelpText>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Is_Active__c,  IMAGE(&quot;https://c.na9.content.force.com/servlet/servlet.FileDownload?file=015E0000002zGs6&quot;, &quot;OK&quot;, 16, 16), IMAGE(&quot;https://c.na9.content.force.com/servlet/servlet.FileDownload?file=015E0000002zGsB&quot;, &quot;NA&quot;, 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Opinion Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OQ-{0000}</displayFormat>
        <label>Opinion Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opinion Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>